--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         </div>
 
         <div class="Info_Container">
+            <a href="./PDFs/Felsefe_2.Donem_1.Yazlı.pdf" target="_blank">Felsefe 2.Dönem 1.Yazılı</a>
+        </div>
+        
+        <div class="Info_Container">
+            <a href="./PDFs/Tarih_2.Donem_1.Yazlı.pdf" target="_blank">Tarih 2.Dönem 1.Yazılı</a>
+        </div>
+
+        <div class="Info_Container">
             <a href="" target="_blank">Felsefe 2.Dönem 2.Yazılı</a>
         </div>
 
