--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         </div>
 
         <div class="Info_Container">
-            <a href="" target="_blank">Felsefe 2.Dönem 2.Yazılı</a>
+            <a href="./PDFs/Felsefe 2.Dönem 2.Yazılı.pdf" target="_blank">Felsefe 2.Dönem 2.Yazılı</a>
         </div>
         
         <div class="Info_Container">
             <a href="./PDFs/Tubitak_4006_Brosur_Tasarm_1_Yeni.pdf" target="_blank">Öğrenciler İçin Ders Çalışma Alışkanlıkları Kılavuzu</a>
         </div>
+        
 
 
     </body>
