--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <a href="./PDFs/Tubitak_4006_Brosur_Tasarm_1_Yeni.pdf" target="_blank">Öğrenciler İçin Ders Çalışma Alışkanlıkları Kılavuzu</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/Fizik 2.Dönem 2.Yazılı Senaryosu.pdf" target="_blank">Fizik 2.Dönem 2.Yazılı Senaryosu</a>
+        </div>
+        
 
 
     </body>
