--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <a href="./PDFs/11açıkuçluSorlar5Unite (1)[1].docx" target="_blank">Din Kültürü 2.Dönem 2.Yazılı Çalışma Kağıdı 2</a>
         </div> 
         
+        <div class="Info_Container">
+            <a href="./PDFs/Kimya 2.Dönem 2.Yazılı Taslağı-Örneği.pdf" target="_blank">Kimya 2.Dönem 2.Yazılı Taslağı/Örneği/Çalışma Kağıdı</a>
+        </div>
         
 
 
