--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <a href="./PDFs/Kimya 2.Dönem 2.Yazılı Taslağı-Örneği.pdf" target="_blank">Kimya 2.Dönem 2.Yazılı Taslağı/Örneği/Çalışma Kağıdı</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/Edebiyat 2.Dönem 2.Yazılı.pdf" target="_blank">Edebiyat 2.Dönem 2.Yazılı</a>
+        </div>
+        
 
 
     </body>
