--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             <a href="./PDFs/Edebiyat 2.Dönem 2.Yazılı.pdf" target="_blank">Edebiyat 2.Dönem 2.Yazılı</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/Yaz Planım.pdf" target="_blank">Yaz Planım</a>
+        </div>
+        
 
 
     </body>
