--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             <a href="./PDFs/Yaz Planım.pdf" target="_blank">Yaz Planım</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/Değişim Protokolü.pdf" target="_blank">Değişim Protokolü</a>
+        </div>
+        
 
 
     </body>
