--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             <a href="./PDFs/Değişim Protokolü.pdf" target="_blank">Değişim Protokolü</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/YazınEkİşlerim.html" target="_blank">Yazın Ek Olarak Yaptığım İşler</a>
+        </div>
+        
 
 
     </body>
