--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -11,7 +11,7 @@
 
         <h5>Not: Burada plana dahil olmayıp ek olarak yaptığım şeyler var.</h5>
 
-        <p>21.06.2024 -> 4 Tane Oran-Orantı Testi Çözdüm (Problemlerin İlacI)</p>
+        <p>21.06.2024 &rightarrow; 4 Tane Oran-Orantı Testi Çözdüm (Problemlerin İlacı)</p>
 
 
         
