--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -4,16 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yazın Ek Olarak Yaptığım İşler</title>
+
+        <link href="../StyleSheets/index_stylesheet.css" rel="stylesheet">
     </head>
     <body>
-
-        <h1>Bu Siteyi Bir Süre Sonra PDF Haline Çevireceğim</h1>
-
-        <h5>Not: Burada plana dahil olmayıp ek olarak yaptığım şeyler var.</h5>
-
-        <p>21.06.2024 &rightarrow; 4 Tane Oran-Orantı Testi Çözdüm (Problemlerin İlacı)</p>
+        <div class="Center_Div" style="flex-direction: column !important;">
 
 
-        
+            <h1>Bu Siteyi Bir Süre Sonra PDF Haline Çevireceğim</h1>
+
+            <h5>Not: Burada plana dahil olmayıp ek olarak yaptığım şeyler var.</h5>
+
+            <p>21.06.2024 &rightarrow; 4 Tane Oran-Orantı Testi Çözdüm (Problemlerin İlacı)</p>
+            
+            <p>22.06.2024 &rightarrow; 2 Tane Çemberde Açı Testi Çözdüm (Acil Geometri Soru Bankası)</p>
+
+
+
+
+
+
+        </div>
     </body>
 </html>
