--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -19,7 +19,8 @@
             
             <p>22.06.2024 &rightarrow; 2 Tane Çemberde Açı Testi Çözdüm (Acil Geometri Soru Bankası)</p>
 
-
+            <p>23.06.2024 &rightarrow; 5 Tane Veri Testi Çözdüm (Eğitim Vadisi) </p>
+            <p>23.06.2024 &rightarrow; 1 Tane Basamak Kavramı Testi Çözdüm (345 Yayınları) </p>
 
 
 
