--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             <a href="./Siteler/YazınEkİşlerim.html" target="_blank">Yazın Ek Olarak Yaptığım İşler</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/YKS2025GeriSayim.html" target="_blank">YKS 2025 Geri Sayım</a>
+        </div>
+        
 
 
     </body>
