--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -21,6 +21,8 @@
 
             <p>23.06.2024 &rightarrow; 5 Tane Veri Testi Çözdüm (Eğitim Vadisi) </p>
             <p>23.06.2024 &rightarrow; 1 Tane Basamak Kavramı Testi Çözdüm (345 Yayınları) </p>
+            
+            <p>24.06.2024 &rightarrow; 1 Tane TYT Denemesi Çözdüm (TÖZOK Yayınları) </p>
 
 
 
