--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
             <a href="./Siteler/YKS2025GeriSayim.html" target="_blank">YKS 2025 Geri Sayım</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/TYTdenemeANALİZLERİ.html" target="_blank">TYT Deneme Analizlerim</a>
+        </div>
+        
 
 
     </body>
