--- a/Siteler/TYTdenemeANALİZLERİ.html
+++ b/Siteler/TYTdenemeANALİZLERİ.html
@@ -62,7 +62,7 @@
                         bu sonuç ta beni memnun eder. Artık mattan kaç yapıyorsun denilince 24 diyebileceğim.
                         Fen bilimlerine sadece 6 dk kalmıştı hızlı gene baktım sallamasyon bir şeyler yaptım.
                         Ancak kursların ardından hemen tyt fen çalışmaya başlayacağım ve bence yaklaşık 1-1,5 ay içinde
-                        bitirebilirim. Yine bol soru çözmem gerekecek. Diyeceğim o ki eksiklerimi görmem ve Matematikte 
+                        bitirebilirim. Yine bol soru çözmem gerekecek. Diyeceğim o ki eksiklerimi görmem ve matematikte 
                         çok kötü olmadığımı kanıtlama anlamında güzel bir denemeydi.
                     </p>
                 </div>
