--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -23,6 +23,8 @@
             <p>23.06.2024 &rightarrow; 1 Tane Basamak Kavramı Testi Çözdüm (345 Yayınları) </p>
             
             <p>24.06.2024 &rightarrow; 1 Tane TYT Denemesi Çözdüm (TÖZOK Yayınları) </p>
+            
+            <p>24.06.2024 &rightarrow; 2 Tane Çemberde Açı Testi Çözdüm (Acil Yayınları) </p>
 
 
 
