--- a/Siteler/YazınEkİşlerim.html
+++ b/Siteler/YazınEkİşlerim.html
@@ -27,6 +27,8 @@
             <p>25.06.2024 &rightarrow; 2 Tane Çemberde Açı Testi Çözdüm (Acil Yayınları) </p> 
             
             <p>26.06.2024 &rightarrow; 2 Tane Doğruda Açı Testi Çözdüm (Acil Yayınları) </p> 
+            
+            <p>27.06.2024 &rightarrow; 1 Tane Paragraf Testi Çözdüm (345 Yayınları) </p> 
 
 
 
