--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
             <a href="./Siteler/TYTdenemeANALİZLERİ.html" target="_blank">TYT Deneme Analizlerim</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/Çözemediğim Sorular.pdf" target="_blank">Çözemediğim Sorular</a>
+        </div>
+        
 
 
     </body>
