--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
             <a href="./PDFs/Çözemediğim Sorular.pdf" target="_blank">Çözemediğim Sorular</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/TYT Biyoloji Organeller Özet.pdf" target="_blank">TYT Biyoloji Organeller Özet</a>
+        </div>
+        
 
 
     </body>
