--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         
         <div class="Info_Container">
-            <a href="./PDFs/TYT Biyoloji Madde Döngüleri.pdf" target="_blank">TYT Biyoloji Madde Döngüleri</a>
+            <a href="./PDFs/TYT Biyoloji Madde Döngüleri.pdf" target="_blank">TYT Biyoloji Azot Döngüsü</a>
         </div>
         
 
