--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         
         <div class="Info_Container">
-            <a href="./PDFs/TYT Biyoloji Canlıların Sınıflandırılması Özet (Tamamlanmadı).pdf" target="_blank">TYT Biyoloji Canlıların Sınıflandırılması Özet (Tamamlanmadı)</a>
+            <a href="./PDFs/TYT Biyoloji Canlıların Sınıflandırılması Özet.pdf" target="_blank">TYT Biyoloji Canlıların Sınıflandırılması Özet</a>
         </div>
         
         <div class="Info_Container">
