--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <a href="./PDFs/TYT Biyoloji Madde Döngüleri.pdf" target="_blank">TYT Biyoloji Azot Döngüsü</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/TYT Kimya Yaygın Bileşikler.pdf" target="_blank">TYT Kimya Yaygın Bileşikler</a>
+        </div>
+        
 
 
     </body>
