--- a/Siteler/TYTdenemeANALİZLERİ.html
+++ b/Siteler/TYTdenemeANALİZLERİ.html
@@ -416,7 +416,7 @@
             
             
             <div id="Deneme6" class="Deneme">
-                <h3 class="Başlık">12.Sınıfın İlk Denemesi (Zaman Alacak)</h3>
+                <h3 class="Başlık">12.Sınıfın Tyt İlk Denemesi (Zaman Alacak)</h3>
                 <p>Tarihi: 29.09.2024</p>
                 <p>Yayını: Pro Lig / Profesyoneller Karması</p>
                 <div class="Netler">
