--- a/Siteler/TYTdenemeANALİZLERİ.html
+++ b/Siteler/TYTdenemeANALİZLERİ.html
@@ -6,7 +6,12 @@
         <title>TYT Deneme Analizlerim - Melih Berk Sönmez</title>
         <link href="../StyleSheets/TYTanalizlerim_stylesheet.css" rel="stylesheet">
     </head>
+
     <body>
+
+
+        <h3 id="local-timer">Haburada saat yazmalı</h3>
+
 
         <div class="Tutucu-Div">
             <div id="Deneme1" class="Deneme">
@@ -429,15 +434,15 @@
                 </div>
                 <div class="Kazanımlar">
                     <h4>Türkçe</h4>
-                    <p>Deyim Açıklaması Bilme &star; </p>
+                    <p>Deyim Açıklaması Bilme &star; &check;</p>
                     <p>Dikkat Hatası</p>
-                    <p>Cümlede Asıl Anlatılanı Bulma</p>
-                    <p>Ses Olayları (Soru Çöz)</p>
-                    <p>Noktalama İşaretleri</p>
-                    <p>Tamlamalar</p>
-                    <p>Fiil-İsim Cümlesi Bulma</p>
-                    <p>Paragraf, Okuduğunu Anlama</p>
-                    <p>Paragraf, Düşüncenin Akışını Bozan Cümle &star; </p>
+                    <p>Cümlede Asıl Anlatılanı Bulma &check;</p>
+                    <p>Ses Olayları (Soru Çöz) &check;</p>
+                    <p>Noktalama İşaretleri &check;</p>
+                    <p>Tamlamalar &check;</p>
+                    <p>Fiil-İsim Cümlesi Bulma &check;</p>
+                    <p>Paragraf, Okuduğunu Anlama &check;</p>
+                    <p>Paragraf, Düşüncenin Akışını Bozan Cümle &star; &check;</p>
                     
                     
                     <h4>Sosyal Bilimler</h4>
