--- a/Siteler/TYTdenemeANALİZLERİ.html
+++ b/Siteler/TYTdenemeANALİZLERİ.html
@@ -564,7 +564,7 @@
                 <div class="Netler">
                     <p>Türkçe: 34 Doğru 6 Yanlış 0 Boş / 32,50 Net </p>
                     <p>Sosyal Bilimiler: 17 Doğru 2 Yanlış 1 Boş / 16,50 Net</p>
-                    <p>Matematik (Genel): 20 Doğru 7 Yanlış 3 Boş / 18,25 Net</p>
+                    <p>Matematik: 20 Doğru 7 Yanlış 3 Boş / 18,25 Net</p>
                     <p>Geometri: 6 Doğru 1 Yanlış 3 Boş / 5,75 Net</p>
                     <p>Fen Bilimleri: 16 Doğru 4 Yanlış 0 Boş / 15,00 Net</p>
                     <p>Toplam: 88,00 Net</p>
