--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             <a href="./PDFs/TYT Kimya Yaygın Bileşikler.pdf" target="_blank">TYT Kimya Yaygın Bileşikler</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/12.Sınıf 1.Dönem 1.Yazılı Basış Planı.pdf" target="_blank">12.Sınıf 1.Dönem 1.Yazılı Planı</a>
+        </div>
+        
 
 
     </body>
