--- a/Siteler/TYTdenemeANALİZLERİ.html
+++ b/Siteler/TYTdenemeANALİZLERİ.html
@@ -682,7 +682,7 @@
 
                 </div>
                 <div class="Düşüncelerim">
-                    <p>Enes'ten o çikolatayı yemeden pes etmek yok!
+                    <p>Enes'ten o çikolatayı yemeden pes etmek yok!(Daha iyi olmalıydı. Eksiklerimi biliyorum. Onların üstüne gideceğim.)
                     </p>
                 </div>
             </div>
