--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
             <a href="./PDFs/12.Sınıf 1.Dönem 1.Yazılı Basış Planı.pdf" target="_blank">12.Sınıf 1.Dönem 1.Yazılı Planı</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/1. Ara Tatil Basış Planı.pdf" target="_blank">1. Ara Tatil Basış Planı</a>
+        </div>
+        
 
 
     </body>
