--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
             <a href="./PDFs/1. Ara Tatil Basış Planı.pdf" target="_blank">1. Ara Tatil Basış Planı</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/HaftalıkÇalışmaProgramlarım.html" target="_blank">Haftalık Çalışma Programlarım</a>
+        </div>
+        
 
 
     </body>
