--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             <a href="./Siteler/HaftalıkÇalışmaProgramlarım.html" target="_blank">Haftalık Çalışma Programlarım</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/Önemli Sorular.html" target="_blank">Önemli Sorularla İlgili Denemeler</a>
+        </div>
+        
 
 
     </body>
