--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -11,9 +11,9 @@
         <div class="Center_Div" style="flex-direction: column !important;">
 
 
-            <a href="../PDFs/23 Ekim 1 Haftalık Program.pdf" target="_blank">23 Ekim 1 Haftalık Programı</a>
-
-
+            <a href="../PDFs/Haftalık Programlar/23 Ekim 1 Haftalık Program.pdf" target="_blank">23 Ekim 1 Haftalık Programı</a>
+            
+            <a href="../PDFs/Haftalık Programlar/08 Aralık 1 Haftalık Program.pdf" target="_blank">08 Aralık 1 Haftalık Programı</a>
 
         </div>
     </body>
