--- a/Siteler/Önemli Sorular.html
+++ b/Siteler/Önemli Sorular.html
@@ -11,7 +11,8 @@
         <div class="Center_Div" style="flex-direction: column !important;">
 
 
-            <a href="../PDFs/Önemli Sorular 1. Deneme.pdf" target="_blank">Önemli Sorular 1. Deneme</a>
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 1. Deneme.pdf" target="_blank">Önemli Sorular 1. Deneme</a>
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 2. Deneme.pdf" target="_blank">Önemli Sorular 2. Deneme</a>
 
 
 
