--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
             <a href="./Siteler/Önemli Sorular.html" target="_blank">Önemli Sorularla İlgili Denemeler</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./Siteler/YoutubeMatematikAkıllıKampı.html" target="_blank">Youtube Akıllı Matematik Kampı</a>
+        </div>
+        
 
 
     </body>
