--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -24,6 +24,7 @@
             <h5 id="Today">Bugün: </h5>
             <h5 id="StartDay">Başlagıç Günü: </h5>
             <h5 id="DifferenceInDays">Geçen Gün:</h5>
+            <h5 id="TotalQuestion">Çözülen Soru Sayısı:</h5>
         </div>
 
     </body>
