--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -11,9 +11,11 @@
         <div class="Center_Div" style="flex-direction: column !important;">
 
 
-            <a href="../PDFs/Haftalık Programlar/23 Ekim 1 Haftalık Program.pdf" target="_blank">23 Ekim 1 Haftalık Programı</a>
+            <a href="../PDFs/Haftalık Programlar/23 Ekim 1 Haftalık Program.pdf" target="_blank">23 Ekim 1 Haftalık Program</a>
             
-            <a href="../PDFs/Haftalık Programlar/08 Aralık 1 Haftalık Program.pdf" target="_blank">08 Aralık 1 Haftalık Programı</a>
+            <a href="../PDFs/Haftalık Programlar/08 Aralık 1 Haftalık Program.pdf" target="_blank">08 Aralık 1 Haftalık Program</a>
+            
+            <a href="../PDFs/Haftalık Programlar/22 Aralık 1 Haftalık Program.pdf" target="_blank">22 Aralık 1 Haftalık Program</a>
 
         </div>
     </body>
