--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -19,6 +19,7 @@
         <a class="notSelected" href="https://www.youtube.com/watch?v=vzwtixANrKU&list=PLto0Y-Oz3y1o8TLQLF4Ta53QeTIXcnJMD" id="1.Gün">Hedef İlk Bin</a>
         <a class="notSelected" href="https://www.youtube.com/@ArananMat/featured" id="2.Gün">Aranıp Bulunamayan Matematik Soruları</a>
         <a class="notSelected" href="https://www.youtube.com/@sukruakkoyunmatematik/videos" id="3.Gün">Şükrü Akkoyun Matematik</a>
+        <a class="notSelected" href="https://www.youtube.com/@Mozhoca/videos" id="4.Gün">Moz Akademi</a>
 
         <div id="InfoDiv">
             <h5 id="Today">Bugün: </h5>
