--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -16,6 +16,9 @@
             <a href="../PDFs/Haftalık Programlar/08 Aralık 1 Haftalık Program.pdf" target="_blank">08 Aralık 1 Haftalık Program</a>
             
             <a href="../PDFs/Haftalık Programlar/22 Aralık 1 Haftalık Program.pdf" target="_blank">22 Aralık 1 Haftalık Program</a>
+            
+            <a href="../PDFs/Haftalık Programlar/AYT Fizik Bitiriş.pdf" target="_blank">AYT Fizik Bitiriş</a>
+            <a href="../PDFs/Haftalık Programlar/AYT Kimya-Biyoloji Bitiriş.pdf" target="_blank">AYT Kimya-Biyoloji Bitiriş</a>
 
         </div>
     </body>
