--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -19,6 +19,7 @@
             
             <a href="../PDFs/Haftalık Programlar/AYT Fizik Bitiriş.pdf" target="_blank">AYT Fizik Bitiriş</a>
             <a href="../PDFs/Haftalık Programlar/AYT Kimya-Biyoloji Bitiriş.pdf" target="_blank">AYT Kimya-Biyoloji Bitiriş</a>
+            <a href="../PDFs/Haftalık Programlar/LimitTürevİntegral (LTİ) Kampı.pdf" target="_blank">Limit Türev İntegral (LTİ) Kampı</a>
 
         </div>
     </body>
