--- a/Siteler/Önemli Sorular.html
+++ b/Siteler/Önemli Sorular.html
@@ -14,6 +14,8 @@
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 1. Deneme.pdf" target="_blank">Önemli Sorular 1. Deneme</a>
             
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 2. Deneme.pdf" target="_blank">Önemli Sorular 2. Deneme</a>
+            
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 3. Deneme.pdf" target="_blank">Önemli Sorular 3. Deneme</a>
 
 
 
