--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -22,6 +22,8 @@
             <a href="../PDFs/Haftalık Programlar/LimitTürevİntegral (LTİ) Kampı.pdf" target="_blank">Limit Türev İntegral (LTİ) Kampı</a>
             
             <a href="../PDFs/Haftalık Programlar/15 Tatil.pdf" target="_blank">15 Tatil</a>
+            
+            <a href="../PDFs/Haftalık Programlar/Eksik Konular Kampı.pdf" target="_blank">Eksik Konular Kampı</a>
 
         </div>
     </body>
