--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -20,6 +20,7 @@
         <a class="notSelected" href="https://www.youtube.com/@ArananMat/featured" id="2.Gün">Aranıp Bulunamayan Matematik Soruları</a>
         <a class="notSelected" href="https://www.youtube.com/@sukruakkoyunmatematik/videos" id="3.Gün">Şükrü Akkoyun Matematik</a>
         <a class="notSelected" href="https://www.youtube.com/@Mozhoca/videos" id="4.Gün">Moz Akademi</a>
+        <a class="notSelected" href="https://www.youtube.com/@MatematikOzel345/videos" id="5.Gün">Matematik Özel</a>
 
         <div id="InfoDiv">
             <h5 id="Today">Bugün: </h5>
