--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -21,6 +21,7 @@
         <a class="notSelected" href="https://www.youtube.com/@sukruakkoyunmatematik/videos" id="3.Gün">Şükrü Akkoyun Matematik</a>
         <a class="notSelected" href="https://www.youtube.com/@Mozhoca/videos" id="4.Gün">Moz Akademi</a>
         <a class="notSelected" href="https://www.youtube.com/@MatematikOzel345/videos" id="5.Gün">Matematik Özel</a>
+        <a class="notSelected" href="https://www.youtube.com/@yektugmat_YasinKARA" id="6.Gün">Yektuğ Mat</a>
 
         <div id="InfoDiv">
             <h5 id="Today">Bugün: </h5>
