--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -24,6 +24,8 @@
             <a href="../PDFs/Haftalık Programlar/15 Tatil.pdf" target="_blank">15 Tatil</a>
             
             <a href="../PDFs/Haftalık Programlar/Eksik Konular Kampı.pdf" target="_blank">Eksik Konular Kampı</a>
+            
+            <a href="../PDFs/Haftalık Programlar/MSÜ Öncesi Ölüm Kampı.pdf" target="_blank">MSÜ Öncesi Ölüm Kampı</a>
 
         </div>
     </body>
