--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
             <a href="./Siteler/YoutubeMatematikAkıllıKampı.html" target="_blank">Youtube Akıllı Matematik Kampı</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="https://ogmmateryal.eba.gov.tr/panel/upload/fasikul/d1c3jnfoete.pdf" target="_blank">OGM Materyal Karbonun Allotropları</a>
+        </div>
+        
 
 
     </body>
