--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -23,6 +23,7 @@
         <a class="notSelected" href="https://www.youtube.com/@MatematikOzel345/videos" id="5.Gün">Matematik Özel</a>
         <a class="notSelected" href="https://www.youtube.com/@yektugmat_YasinKARA" id="6.Gün">Yektuğ Mat</a>
         <a class="notSelected" href="https://www.youtube.com/@Bar%C4%B1%C5%9Ft%C4%B1ranmatematik/videos" id="7.Gün">Barıştıran Matematik</a>
+        <a class="notSelected" href="https://www.youtube.com/@smlhoca40" id="7.Gün">SML Hoca</a>
 
         <div id="InfoDiv">
             <h5 id="Today">Bugün: </h5>
