--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
             <a href="https://ogmmateryal.eba.gov.tr/panel/upload/fasikul/d1c3jnfoete.pdf" target="_blank">OGM Materyal Karbonun Allotropları</a>
         </div>
         
+        <div class="Info_Container">
+            <a href="./PDFs/3D TG AYT 3 Kaçak Sorular.pdf" target="_blank">3D TG AYT 3 Kaçak Sorular</a>
+            <a href="./PDFs/Bilgi Sarmarl TG 3 Kaçak Sorular.pdf" target="_blank">Bilgi Sarmarl TG 3 Kaçak Sorular</a>
+        </div>
+        
 
 
     </body>
