--- a/Siteler/HaftalıkÇalışmaProgramlarım.html
+++ b/Siteler/HaftalıkÇalışmaProgramlarım.html
@@ -30,7 +30,8 @@
             <a href="../PDFs/Haftalık Programlar/02 Mart 1 Haftalık Program.pdf" target="_blank">02 Mart 1 Haftalık Program</a>
             
             <a href="../PDFs/Haftalık Programlar/18 Mart 5 Günlük Program.pdf" target="_blank">18 Mart 5 Günlük Program</a>
-
+            
+            <a href="../PDFs/Haftalık Programlar/17 Günde Problemler Bitiriş.pdf" target="_blank">17 Günde Problemler Bitiriş</a>
         </div>
     </body>
 </html>
