--- a/Siteler/Önemli Sorular.html
+++ b/Siteler/Önemli Sorular.html
@@ -20,7 +20,8 @@
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 5. Deneme.pdf" target="_blank">Önemli Sorular 5. Deneme</a>
             
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 6. Deneme.pdf" target="_blank">Önemli Sorular 6. Deneme</a>
-
+            
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 7. Deneme.pdf" target="_blank">Önemli Sorular 7. Deneme</a>
 
         </div>
     </body>
