--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
         <div class="Info_Container">
             <a href="./PDFs/3D TG AYT 3 Kaçak Sorular.pdf" target="_blank">3D TG AYT 3 Kaçak Sorular</a>
             <a href="./PDFs/Bilgi Sarmarl TG 3 Kaçak Sorular.pdf" target="_blank">Bilgi Sarmarl TG 3 Kaçak Sorular</a>
+            <a href="./PDFs/3D TG AYT 5 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 5 Kaçak Sorular (2024)</a>
+            <a href="./PDFs/345 2024 Son Prova Ayt Kaçak Sorular.pdf" target="_blank">Son Prova Ayt Kaçak Sorular (2024)</a>
         </div>
         
 
