--- a/Siteler/Önemli Sorular.html
+++ b/Siteler/Önemli Sorular.html
@@ -22,6 +22,8 @@
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 6. Deneme.pdf" target="_blank">Önemli Sorular 6. Deneme</a>
             
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 7. Deneme.pdf" target="_blank">Önemli Sorular 7. Deneme</a>
+            
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 8. Deneme.pdf" target="_blank">Önemli Sorular 8. Deneme</a>
 
         </div>
     </body>
