--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <a href="./PDFs/3D TG AYT 5 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 5 Kaçak Sorular (2024)</a>
             <a href="./PDFs/345 2024 Son Prova Ayt Kaçak Sorular.pdf" target="_blank">345 Son Prova Ayt Kaçak Sorular (2024)</a>
             <a href="./PDFs/Apotem AYT Mat Kaçak Sorular.pdf" target="_blank">Apotemi Ayt Mat. Kaçak Sorular </a>
+            <a href="./PDFs/Barış TG Nisan AYT Matematik.pdf" target="_blank">Barış TG Nisan AYT Matematik Kaçak Sorular </a>
         </div>
         
 
