--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <a href="./PDFs/Barış TG Nisan AYT Matematik.pdf" target="_blank">Barış TG Nisan AYT Matematik Kaçak Sorular </a>
             <a href="./PDFs/Bilgi Sarmal TG 4 (2024) Kaçak Sorular.pdf" target="_blank">Bilgi Sarmal TG 4 (2024) Kaçak Sorular </a>
             <a href="./PDFs/Orijinal TG 2 Ayt Mat.pdf" target="_blank">Orijinal TG 2 Ayt Mat Kaçak Sorular</a>
+            <a href="./PDFs/Orijinal TG 2 Ayt Fen.pdf" target="_blank">Orijinal TG 2 Ayt Fen Kaçak Sorular</a>
         </div>
         
 
