--- a/Siteler/Önemli Sorular.html
+++ b/Siteler/Önemli Sorular.html
@@ -26,6 +26,11 @@
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 8. Deneme.pdf" target="_blank">Önemli Sorular 8. Deneme</a>
             
             <a href="../PDFs/Önemli Sorular/Önemli Sorular 9. Deneme.pdf" target="_blank">Önemli Sorular 9. Deneme</a>
+
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 10. Deneme.pdf" target="_blank">Önemli Sorular 10. Deneme</a>
+
+            <a href="../PDFs/Önemli Sorular/Önemli Sorular 11. Deneme.pdf" target="_blank">Önemli Sorular 11. Deneme</a>
+
         </div>
     </body>
 </html>
