--- a/index.html
+++ b/index.html
@@ -132,17 +132,47 @@
         
         <div class="Info_Container">
             <a href="./PDFs/3D TG AYT 3 Kaçak Sorular.pdf" target="_blank">3D TG AYT 3 Kaçak Sorular</a>
-            <a href="./PDFs/Bilgi Sarmarl TG 3 Kaçak Sorular.pdf" target="_blank">Bilgi Sarmarl TG 3 Kaçak Sorular</a>
-            <a href="./PDFs/3D TG AYT 4 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 4 Kaçak Sorular (2024)</a>
-            <a href="./PDFs/3D TG AYT 5 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 5 Kaçak Sorular (2024)</a>
-            <a href="./PDFs/345 2024 Son Prova Ayt Kaçak Sorular.pdf" target="_blank">345 Son Prova Ayt Kaçak Sorular (2024)</a>
-            <a href="./PDFs/Apotem AYT Mat Kaçak Sorular.pdf" target="_blank">Apotemi Ayt Mat Kaçak Sorular </a>
-            <a href="./PDFs/Barış TG Nisan AYT Matematik.pdf" target="_blank">Barış TG Nisan AYT Matematik Kaçak Sorular </a>
-            <a href="./PDFs/Bilgi Sarmal TG 4 (2024) Kaçak Sorular.pdf" target="_blank">Bilgi Sarmal TG 4 (2024) Kaçak Sorular </a>
-            <a href="./PDFs/Orijinal TG 2 Ayt Mat.pdf" target="_blank">Orijinal TG 2 Ayt Mat Kaçak Sorular</a>
-            <a href="./PDFs/Orijinal TG 2 Ayt Fen.pdf" target="_blank">Orijinal TG 2 Ayt Fen Kaçak Sorular</a>
         </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/Bilgi Sarmarl TG 3 Kaçak Sorular.pdf" target="_blank">Bilgi Sarmarl TG 3 Kaçak Sorular</a>
+        </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/3D TG AYT 4 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 4 Kaçak Sorular (2024)</a>
+        </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/3D TG AYT 5 Kaçak Sorular (2024).pdf" target="_blank">3D TG AYT 5 Kaçak Sorular (2024)</a>
+        </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/345 2024 Son Prova Ayt Kaçak Sorular.pdf" target="_blank">345 Son Prova Ayt Kaçak Sorular (2024)</a>
+        </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/Apotem AYT Mat Kaçak Sorular.pdf" target="_blank">Apotemi Ayt Mat Kaçak Sorular </a>
+        </div>
+
+        <div class="Info_Container">
+             <a href="./PDFs/Barış TG Nisan AYT Matematik.pdf" target="_blank">Barış TG Nisan AYT Matematik Kaçak Sorular </a>
+        </div>
+
+        <div class="Info_Container">
+             <a href="./PDFs/Bilgi Sarmal TG 4 (2024) Kaçak Sorular.pdf" target="_blank">Bilgi Sarmal TG 4 (2024) Kaçak Sorular </a>
+        </div>
+
+        <div class="Info_Container">
+            <a href="./PDFs/Orijinal TG 2 Ayt Mat.pdf" target="_blank">Orijinal TG 2 Ayt Mat Kaçak Sorular</a>
+        </div>
+
+        <div class="Info_Container">
+             <a href="./PDFs/Orijinal TG 2 Ayt Fen.pdf" target="_blank">Orijinal TG 2 Ayt Fen Kaçak Sorular</a>
+        </div>
+
         
+
+
 
 
     </body>
