--- a/Siteler/YoutubeMatematikAkıllıKampı.html
+++ b/Siteler/YoutubeMatematikAkıllıKampı.html
@@ -29,7 +29,7 @@
             <h5 id="Today">Bugün: </h5>
             <h5 id="StartDay">Başlagıç Günü: </h5>
             <h5 id="DifferenceInDays">Geçen Gün:</h5>
-            <h5 id="TotalQuestion">Çözülen Soru Sayısı:</h5>
+            <h5 id="TotalQuestion">Çözülen Soru Sayısı(Otomatik Sayıyor Ben 5 tane çözdüm):</h5>
         </div>
 
     </body>
