--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
     <body>
 
+
+        <!--<img src="./Resimler/YKS ANISI.jpg" alt="Hayatımından 'ufak' bir anı">-->
+
+
         <div class="Center_Div">
             <h1>DERS SİTESİ</h1>
         </div>
@@ -173,10 +177,10 @@
         <div class="Info_Container">
              <a href="./PDFs/Barış Son Prova Kaçak Sorular.pdf" target="_blank">Barış Son Prova Ayt Mat Kaçak Sorular Kaçak Sorular</a>
         </div>
-
         
-
-
+        <div class="Info_Container">
+             <a href="./Resimler/YKS ANISI.jpg" target="_blank">Anı Resmi</a>
+        </div>
 
 
     </body>
