--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         
         <div class="Info_Container">
-             <a href="./Resimler/YKS ANISI.jpg" target="_blank">Anı Resmi</a>
+             <a href="./Resimler/YKS ANISI.jpg" target="_blank">-----Anı Resmi-----</a>
         </div>
 
 
