--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         <div class="Info_Container">
              <a href="./Resimler/YKS ANISI.jpg" target="_blank">-----Anı Resmi-----</a>
         </div>
+       
+        <div class="Info_Container">
+             <a href="./PDFs/DUZCE TURGUT OZAL AND LIS.pdf" target="_blank">Okul Yıllığı PDF</a>
+        </div>
 
 
     </body>
